# computerenhance

./: CMakeLists.txt
01_Instruction_Decoding_on_the_8086/: CMakeLists.txt  main.cpp
01_Instruction_Decoding_on_the_8086/include/: decompile.h
01_Instruction_Decoding_on_the_8086/tests/: disasm_test.cpp
02_Decoding_Multiple_Instructions_and_Suffixes/: CMakeLists.txt  main.cpp
02_Decoding_Multiple_Instructions_and_Suffixes/include/: decompile.h
02_Decoding_Multiple_Instructions_and_Suffixes/tests/: disassebling_tests.cpp  listing_tests.cpp  utils.h
cmake/: run_disasm_test.cmake
